[tool.poetry]
name = "nyan"
version = "0.7.1"
description = "The easiest way to start coding games and graphics projects in Python"
authors = ["ducaale <sharaf.13@hotmail.com>"]
license = "MIT"
repository = "https://github.com/ducaale/nyan"
readme = "README.md"
include = ["nyan_packager.py"]

[tool.poetry.dependencies]
python = "^3.7"
pygame = "^1.9.6"
pytest = "^5.2"
pyinstaller = "^3.6"
pefile = { version = "^2019.4.18", markers = "sys_platform == 'win32'" }
pywin32 = { version = "^227", markers = "sys_platform == 'win32'" }

[tool.poetry.scripts]
nyan-packager = 'nyan_packager:run'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
