[project]
name = "nyan"
version = "0.13.3"
description = "The easiest way to start coding games and graphics projects in Python"
authors = [
    { name = "ducaale", email = "sharaf.13@hotmail.com" }
]
requires-python = ">=3.9"
license = "MIT"
readme = "README.md"

dependencies = [
    "pygame>=2.6.1",
    "pyinstaller>=3.6",
    "pefile>=2019.4.18; sys_platform == 'win32'",
    "pywin32>=308; sys_platform == 'win32'"
]

[project.scripts]
nyan-packager = "nyan_packager:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

